--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,24 +3,47 @@
 @tailwind utilities;
 
 @layer utilities {
-  .scrollbar::-webkit-scrollbar {
+  .scrollbar-y::-webkit-scrollbar {
     width: 15px;
     height: 20px;
   }
 
-  .scrollbar::-webkit-scrollbar-track {
+  .scrollbar-y::-webkit-scrollbar-track {
     border-radius: 100vh;
     background: #010C15;
+    margin-bottom:31px
+
   }
 
-  .scrollbar::-webkit-scrollbar-thumb {
+  .scrollbar-y::-webkit-scrollbar-thumb {
     background: #011627;
     border-radius: 100vh;
     border: 3px solid #010C15;
 
   }
 
-  .scrollbar::-webkit-scrollbar-thumb:hover {
+  .scrollbar-y::-webkit-scrollbar-thumb:hover {
+    background: #011221;
+  }
+  /* ?scrollbar for x-axis  */
+  .scrollbar-x::-webkit-scrollbar {
+    width: 5px;
+    height: 4px;
+  }
+
+  .scrollbar-x::-webkit-scrollbar-track {
+    border-radius: 100vw;
+    background: #010C15;
+  }
+
+  .scrollbar-x::-webkit-scrollbar-thumb {
+    background: #010C15;
+    border-radius: 100vw;
+    border: 2px solid #011627;
+
+  }
+
+  .scrollbar-x::-webkit-scrollbar-thumb:hover {
     background: #011221;
   }
 }
